deleted userLocation component as no longer used, also set z-index of side bar to appear abouve warning messages

--- a/src/features/map/map.css
+++ b/src/features/map/map.css
@@ -69,7 +69,7 @@
   max-width: 300px;
   height: 100%;
   background-color: #fff;
-  z-index: 99999999;
+  z-index: 999999999999;
   position: absolute;
   top: 0;
   left: 0;
